trait_map_derive/tests/ui/fail/no_such_trait.stderr
error[E0405]: cannot find trait `MyTrait` in this scope
 --> tests/ui/fail/no_such_trait.rs:4:13
  |
4 | #[trait_map(MyTrait)]
  |             ^^^^^^^ not found in this scope
